crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@primitive_types_in_cairo_m___u32_type___u32_multiplication.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Primitive Types in Cairo-M - U32 Type - U32 Multiplication"
input_file: mdtest/01-basics/03-primitive-types.md
---
Source:
fn test_u32_mul() -> u32 {
    let x: u32 = 4294967295;
    let y: u32 = 10;
    return x * y;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_u32_mul {
    entry: 0

    0:
      %0 = 4294967295 (u32)
      %1 = 10 (u32)
      %2 = %0 U32Mul %1
      return %2

  }

}
