crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@primitive_types_in_cairo_m___u32_type___u32_subtraction_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Primitive Types in Cairo-M - U32 Type - U32 Subtraction 2"
input_file: mdtest/01-basics/03-primitive-types.md
---
Source:
fn test_u32_sub_underflow() -> u32 {
    let x: u32 = 0;
    let y: u32 = 1;
    return x - y;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_u32_sub_underflow {
    entry: 0

    0:
      %0 = 0 (u32)
      %1 = 1 (u32)
      %2 = %0 U32Sub %1
      return %2

  }

}
